<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="prefCheckboxAutostart"
        android:title="@string/pref_general_autostart_name"
        android:summary="@string/pref_general_autostart_summary"
        android:defaultValue="true" />
    <CheckBoxPreference
        android:key="prefCheckboxSSID"
        android:title="@string/pref_general_ssid_name"
        android:summary="@string/pref_general_ssid_summary"
        android:defaultValue="true" />
    <EditTextPreference
        android:key="prefDeviceName"
        android:title="@string/pref_general_interface"
        android:defaultValue="wlan0"
        android:selectAllOnFocus="true"

        android:singleLine="true"
        android:maxLines="1" />
</PreferenceScreen>
